tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.out
Object: Array new: 21 "<0x7f6680857590>" error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
Array(Object)>>checkIndexableBounds: (Object.st:796)
Array(Object)>>at: (Object.st:858)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.st:19)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.st:28)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.st:59)
Object: Array new: 21 "<0x7f6680837140>" error: Invalid argument false: must be a SmallInteger
SystemExceptions.WrongClass(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:778)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:774)
Array(Object)>>checkIndexableBounds: ("Global garbage collection... done"
Object.st:794)
Array(Object)>>at: (Object.st:858)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.st:47)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.st:61)
Array(SequenceableCollection)>>do: (SeqCollect.st:827)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.st:60)
