tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:50:28Z
"
| circle end err g i initGrid row s set size trimRight x y |
initGrid := [:size | g := {}.
y := 0.
[(y < size)] whileTrue: [
  row := {}.
  x := 0.
  [(x < size)] whileTrue: [
    row := row copyWith: ' '.
    x := (x + 1).
  ]
  .
  g := g copyWith: row.
  y := (y + 1).
]
.
g ].
set := [:g :x :y | (((((x >= 0) and: [(x < (g at: 0 size))]) and: [(y >= 0)]) and: [(y < (g size))])) ifTrue: [
  g at: y at: x put: '#'.
] . ].
circle := [:r | size := ((r * 2) + 1).
g := initGrid value: size.
x := r.
y := 0.
err := (1 - r).
[(y <= x)] whileTrue: [
  set value: g value: (r + x) value: (r + y).
  set value: g value: (r + y) value: (r + x).
  set value: g value: (r - x) value: (r + y).
  set value: g value: (r - y) value: (r + x).
  set value: g value: (r - x) value: (r - y).
  set value: g value: (r - y) value: (r - x).
  set value: g value: (r + x) value: (r - y).
  set value: g value: (r + y) value: (r - x).
  y := (y + 1).
  ((err < 0)) ifTrue: [
    err := ((err + (2 * y)) + 1).
  ] ifFalse: [
    x := (x - 1).
    err := ((err + (2 * (y - x))) + 1).
  ].
]
.
g ].
trimRight := [:row | end := (row size).
[((end > 0) and: [(row at: (end - 1) = ' ')])] whileTrue: [
  end := (end - 1).
]
.
s := ''.
i := 0.
[(i < end)] whileTrue: [
  s := (s + row at: i).
  i := (i + 1).
]
.
s ].
g := circle value: 10.
g do: [:row |
  Transcript show: (trimRight value: row) printString; cr.
]
.
